# social-network

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  sqlx-data.json
benches/: mod.rs
migrations/: 20230123140227_create_users_table.sql  20230123143032_create_friendships_table.sql  20230125194222_create_user_friends_view.sql
scripts/: init-db.sh
src/: lib.rs
tests/: mod.rs
